# phantom_urdf_ss

./: CMakeLists.txt  README.md  package.xml  pub.m  sub.m
config/: config.rviz  joints.yaml
launch/: phantom_gazebo.launch  phatom_rviz.launch
matlabScripts/: invPhantom.m  lab4.m  mover_phantom.m
meshes/: GripperBody_v4.stl  LeftFinger_v2.stl  PincherBase_v8.stl  ShoulderServo_v5.stl  UpperArm_v2.stl
urdf/: link_joints.xacro  phantom_description_gazebo.xacro  phatomx_description.xacro  robot_parametros.xacro
