<?xml version="1.0"?>
<package format="2">
  <name>phantom_urdf_ss</name>
  <version>0.0.0</version>
  <description>The phantom_urdf_ss package</description>

  <maintainer email="juansantacoloma@unal.edu.co">Juan Santacoloma</maintainer>
  <maintainer email="msucerquiao@unal.edu.co">Manuera Sucerquia</maintainer>

  <license>BSD</license>

  <author email="jssantacolomab@unal.edu.co">Juan Santacoloma</author>
  <author email="msucerquiao@unal.edu.co">Juan Santacoloma</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_depend>robot_state_publisher</build_depend>


  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
